<resources>
    <string name="app_name">Movie App</string>
    <string name="error_message">The list is empty or an error has occured after attempting to load movie list.</string>
    <string name="description">Overview:</string>
    <string name="vote_average">Vote Average:</string>
    <string name="release_date">Release Date:</string>
    <string name="back">Back</string>
    <string name="trailers">Trailers:</string>
    <string name="play_trailer">Play Trailer&#160;</string>
    <string name="reviews">Reviews:</string>
    <string name="menu_favorite">Favorite</string>
    <string name="removed_successfully">was successfully removed from your Favorites List</string>
    <string name="added_sucessfully">was successfully added to your Favorites List</string>

</resources>
