<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/movie_details_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"/>
            <View
                android:layout_alignBottom="@id/movie_details_backdrop"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/gradient"/>

            <TextView
                android:id="@+id/movie_details_title"
                android:paddingLeft="8dp"
                android:paddingBottom="8dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:layout_alignLeft="@id/movie_details_backdrop"
                android:layout_alignBottom="@id/movie_details_backdrop"/>
        </RelativeLayout>

        <LinearLayout
            android:background="@drawable/card"
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginTop="16dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/movie_details_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_average"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    style="@style/TextStyleMovieDetails"/>
                <TextView
                    android:id="@+id/movie_details_vote_average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextStyleMovieDetails"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    style="@style/TextStyleMovieDetails"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/movie_details_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextStyleMovieDetails"
                    android:textSize="16sp"
                    android:textStyle="italic"/>
                <TextView
                    android:text="@string/release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingTop="16dp"
                    style="@style/TextStyleMovieDetails"/>
                <TextView
                    android:id="@+id/movie_details_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextStyleMovieDetails"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:paddingBottom="16dp"/>


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:background="@color/mikesgray">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                style="@style/TextStyleMovieDetailsWhite"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_details_trailers_rv"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:orientation="vertical"
            android:background="@drawable/card">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                style="@style/TextStyleMovieDetails"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/movie_details_reviews_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                style="@style/TextStyleMovieDetails"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>